<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cropper Sample</string>
    <string name="title">Cropper</string>
    <string name="fixedAspectRatio">fixedAspectRatio =\u0020</string>
    <string name="aspectRatioXHeader">aspectRatioX =\u0020</string>
    <string name="aspectRatioYHeader">aspectRatioY =\u0020</string>
    <string name="showGuidelines">showGuidelines =\u0020</string>
    <string name="crop">Crop</string>
    <string name="croppedImageDesc">The cropped image.</string>

    <string-array name="showGuidelinesArray">
        <item>Off</item>
        <item>On Touch</item>
        <item>On</item>
    </string-array>


</resources>